--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="一方潭">
-    <meta name="description" content="个人博客">
+    <meta name="keywords" content="一方谭">
+    <meta name="description" content="博客">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta name="renderer" content="webkit|ie-stand|ie-comp">
